# dotf

./: CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  dotf.toml  install.sh  lefthook.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml  quality.yml  release.yml
docs/: ARCHITECTURE.md  DOTT_TOML_SPEC.md  SPECIFICATION.md
examples/: test_interruption.rs
scripts/: ci-check.sh
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: config.rs  init.rs  install.rs  mod.rs  schema.rs  status.rs  symlinks.rs  sync.rs
src/cli/ui/: components.rs  formatter.rs  icons.rs  interruption.rs  logo.rs  mod.rs  spinner.rs  table.rs  theme.rs
src/core/: mod.rs
src/core/config/: dotf_config.rs  dott_config.rs  mod.rs  settings.rs  validation.rs
src/core/filesystem/: mod.rs  operations.rs
src/core/repository/: git.rs  manager.rs  mod.rs
src/core/scripts/: executor.rs  mod.rs
src/core/symlinks/: backup.rs  conflict.rs  manager.rs  mod.rs
src/error/: mod.rs  types.rs
src/services/: config_service.rs  init_service.rs  init_service_enhanced.rs  install_service.rs  mod.rs  schema_service.rs  schema_validator.rs  status_service.rs  sync_service.rs
src/traits/: filesystem.rs  mod.rs  prompt.rs  repository.rs  script_executor.rs
src/utils/: mod.rs  prompt.rs
