[package]
name = "dott"
version = "0.1.0"
edition = "2021"
authors = ["k1-c"]
description = "A modern dotfile management tool"
repository = "https://github.com/k1-c/dott"
license = "MIT"
keywords = ["dotfiles", "configuration", "management", "cli"]
categories = ["command-line-utilities"]
rust-version = "1.82.0"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# File system
dirs = "6.0"
tempfile = "3.10"

# Git operations
git2 = "0.20"

# Async traits
async-trait = "0.1"

# Terminal UI
dialoguer = "0.11"
indicatif = "0.17"
colored = "3.0"

# HTTP client for validation
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }


# Date/Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.10"
assert_matches = "1.5"
mockall = "0.13"
pretty_assertions = "1.4"
